@@ -394,6 +394,7 @@ $LANG = array (
 		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE' => 'E-Mail senden',
 		'L_CONFIG_ADVANCED_EMAIL_METHOD' => 'E-Mail-Versandmethode',
 		'L_CONFIG_ADVANCED_SMTP_TITLE' => 'Senden von E-Mails mit SMTP',
+		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Brauchen Sie Hilfe : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Dokumentation von PluXml</a>&nbsp;(fr)',
 		'L_CONFIG_ADVANCED_SMTP_ACTIVATION' => 'Aktivieren Sie E-Mails, die einen SMTP-Server senden',
 		'L_CONFIG_ADVANCED_SMTP_SERVER' => 'SMTP-Hostname',
 		'L_CONFIG_ADVANCED_SMTP_USERNAME' => 'SMTP username',
@@ -411,7 +412,7 @@ $LANG = array (
 		'L_CONFIG_ADVANCED_SMTP_USERNAME_HELP' => 'Nom de l\'utilisateur sur l\'hôte SMTP (exemple : pluxml@monserveursmtp.com)',
 		'L_CONFIG_ADVANCED_SMTP_PASSWORD_HELP' => 'Mot de passe de l\'utilisateur sur l\'hôte SMTP',
 		'L_CONFIG_ADVANCED_SMTP_PORT_HELP' => 'Numéro du port de l\'hôte SMTP (par défaut : 465)',
-		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'PluXml permet de générer des tokens uniquement pour le service <a href="https://cloud.google.com">GMAIL de Google</a>.<br>Besoin d\'aide pour générer l\'identifiant et la clés secrete : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">Documentation de PluXml</a>&nbsp;(fr)',
+		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'PluXml permet de générer des tokens uniquement pour le service <a href="https://cloud.google.com">GMAIL de Google</a>.<br>Besoin d\'aide pour générer l\'identifiant et la clés secrete : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Documentation de PluXml</a>&nbsp;(fr)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_EMAIL_HELP' => 'Adresse utilisée sur le service OAUTH2 (exemple : pluxml@gmail.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_CLIENTID_HELP' => 'Identifiant client sur le service OAUTH2 (exemple : 664335625964-uha1vop20qPluXml81ubjkkgfabbbj6d.apps.googleusercontent.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY_HELP' => 'La clé du client sur le service OAUTH2 (exemple : PrsvKp6aprKpoP8snnCoC8-x)',
