@@ -401,13 +401,13 @@ $LANG = array (
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY' => 'Clave secreta del cliente',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_TOKEN' => 'Token',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_GETTOKEN' => 'Generar un token',
-		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Necesitas ayuda : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Necesitas ayuda : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Documentación de PluXml</a>&nbsp;(fr)',
 		'L_CONFIG_ADVANCED_EMAIL_METHOD_HELP' => 'No se requiere configuración para sendmail.',
 		'L_CONFIG_ADVANCED_SMTP_SERVER_HELP' => 'Nombre del servidor SMTP (ejemplo: ssl0.ovh.net)',
 		'L_CONFIG_ADVANCED_SMTP_USERNAME_HELP' => 'Nombre de usuario en el host SMTP (ejemplo : pluxml@monserveursmtp.com)',
 		'L_CONFIG_ADVANCED_SMTP_PASSWORD_HELP' => 'Contraseña de usuario en el host SMTP',
 		'L_CONFIG_ADVANCED_SMTP_PORT_HELP' => 'Número de puerto del host SMTP (predeterminado : 465)',
-		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'PluXml permite generar tokens solo para el servicio <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Necesita ayuda para generar el nombre de usuario y la clave secreta : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'PluXml permite generar tokens solo para el servicio <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Necesita ayuda para generar el nombre de usuario y la clave secreta : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Documentación de PluXml</a>&nbsp;(fr).',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_EMAIL_HELP' => 'Dirección utilizada en el servicio OAUTH2 (ejemplo: pluxml@gmail.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_CLIENTID_HELP' => 'ID de cliente en el servicio OAUTH2 (ejemplo : 664335625964-uha1vop20qPluXml81ubjkkgfabbbj6d.apps.googleusercontent.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY_HELP' => 'La clave del cliente en el servicio OAUTH2 (ejemplo : PrsvKp6aprKpoP8snnCoC8-x)',
