@@ -353,13 +353,13 @@ $LANG = array (
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY' => 'Chiave segreta del cliente',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_TOKEN' => 'Token',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_GETTOKEN' => 'Genera un token',
-		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Ho bisogno di aiuto : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Ho bisogno di aiuto : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Documentazione di PluXml</a>&nbsp;(fr)',
 		'L_CONFIG_ADVANCED_EMAIL_METHOD_HELP' => 'Non è richiesta alcuna configurazione per sendmail.',
 		'L_CONFIG_ADVANCED_SMTP_SERVER_HELP' => 'Nome del server SMTP (esempio : ssl0.ovh.net)',
 		'L_CONFIG_ADVANCED_SMTP_USERNAME_HELP' => 'Nome utente sull\'host SMTP (esempio : pluxml@monserveursmtp.com)',
 		'L_CONFIG_ADVANCED_SMTP_PASSWORD_HELP' => 'Password utente sull\'host SMTP',
 		'L_CONFIG_ADVANCED_SMTP_PORT_HELP' => 'Numero porta host SMTP (impostazione predefinita : 465)',
-		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'PluXml consente di generare token solo per il servizio <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Hai bisogno di aiuto per generare il nome utente e la chiave segreta : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'PluXml consente di generare token solo per il servizio <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Hai bisogno di aiuto per generare il nome utente e la chiave segreta : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Documentazione di PluXml</a>&nbsp;(fr).',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_EMAIL_HELP' => 'Indirizzo utilizzato sul servizio OAUTH2 (esempio : pluxml@gmail.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_CLIENTID_HELP' => 'ID cliente sul servizio OAUTH2 (esempio : 664335625964-uha1vop20qPluXml81ubjkkgfabbbj6d.apps.googleusercontent.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY_HELP' => 'La chiave client sul servizio OAUTH2 (esempio : PrsvKp6aprKpoP8snnCoC8-x)',
