@@ -388,13 +388,13 @@ $LANG = array (
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY' => 'Client geheime sleutel',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_TOKEN' => 'Token',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_GETTOKEN' => 'Genereer een token',
-		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Hulp nodig : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Hulp nodig : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Documentatie van PluXml</a>&nbsp;(fr)',
 		'L_CONFIG_ADVANCED_EMAIL_METHOD_HELP' => 'Er is geen configuratie vereist voor sendmail.',
 		'L_CONFIG_ADVANCED_SMTP_SERVER_HELP' => 'SMTP-servernaam (voorbeeld : ssl0.ovh.net)',
 		'L_CONFIG_ADVANCED_SMTP_USERNAME_HELP' => 'Gebruikersnaam op de SMTP-host (voorbeeld : pluxml@monserveursmtp.com)',
 		'L_CONFIG_ADVANCED_SMTP_PASSWORD_HELP' => 'Gebruikerswachtwoord op de SMTP-host',
 		'L_CONFIG_ADVANCED_SMTP_PORT_HELP' => 'SMTP-hostpoortnummer (standaard : 465)',
-		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'Met PluXml kunnen alleen tokens voor de service worden gegenereerd <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Hulp nodig bij het genereren van de gebruikersnaam en de geheime sleutel : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'Met PluXml kunnen alleen tokens voor de service worden gegenereerd <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Hulp nodig bij het genereren van de gebruikersnaam en de geheime sleutel : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Documentatie van PluXml</a>&nbsp;(fr).',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_EMAIL_HELP' => 'Adres gebruikt op de OAUTH2-service (voorbeeld : pluxml@gmail.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_CLIENTID_HELP' => 'Klant-ID voor de OAUTH2-service (voorbeeld : 664335625964-uha1vop20qPluXml81ubjkkgfabbbj6d.apps.googleusercontent.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY_HELP' => 'De clientsleutel op de OAUTH2-service (voorbeeld : PrsvKp6aprKpoP8snnCoC8-x)',
