@@ -357,13 +357,13 @@ $LANG = array (
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY' => 'Chave secreta do cliente',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_TOKEN' => 'Token',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_GETTOKEN' => 'Gere um token',
-		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Preciso de ajuda : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Preciso de ajuda : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Documentação do PluXml</a>&nbsp;(fr)',
 		'L_CONFIG_ADVANCED_EMAIL_METHOD_HELP' => 'Nenhuma configuração é necessária para o sendmail.',
 		'L_CONFIG_ADVANCED_SMTP_SERVER_HELP' => 'Nome do servidor SMTP (exemplo : ssl0.ovh.net)',
 		'L_CONFIG_ADVANCED_SMTP_USERNAME_HELP' => 'Nome de usuário no host SMTP (exemplo : pluxml@monserveursmtp.com)',
 		'L_CONFIG_ADVANCED_SMTP_PASSWORD_HELP' => 'Senha do usuário no host SMTP',
 		'L_CONFIG_ADVANCED_SMTP_PORT_HELP' => 'Número da porta do host SMTP (padrão: 465)',
-		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'O PluXml permite gerar tokens apenas para o serviço <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Precisa de ajuda para gerar o nome de usuário e a chave secreta: <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'O PluXml permite gerar tokens apenas para o serviço <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Precisa de ajuda para gerar o nome de usuário e a chave secreta: <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Documentação do PluXml</a>&nbsp;(fr).',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_EMAIL_HELP' => 'Endereço usado no serviço OAUTH2 (exemplo : pluxml@gmail.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_CLIENTID_HELP' => 'ID do cliente no serviço OAUTH2 (exemplo: 664335625964-uha1vop20qPluXml81ubjkkgfabbbj6d.apps.googleusercontent.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY_HELP' => 'A chave do cliente no serviço OAUTH2 (exemplo : PrsvKp6aprKpoP8snnCoC8-x)',
