@@ -354,13 +354,13 @@ $LANG = array (
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY' => 'Cheia secretă a clientului',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_TOKEN' => 'Token',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_GETTOKEN' => 'Generați un jeton',
-		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Nevoie de ajutor : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Nevoie de ajutor : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Documentația PluXml</a>&nbsp;(fr)',
 		'L_CONFIG_ADVANCED_EMAIL_METHOD_HELP' => 'Nicio configurație nu este necesară pentru sendmail.',
 		'L_CONFIG_ADVANCED_SMTP_SERVER_HELP' => 'Nume server SMTP (exemplu : ssl0.ovh.net)',
 		'L_CONFIG_ADVANCED_SMTP_USERNAME_HELP' => 'Numele de utilizator pe gazda SMTP (exemplu : pluxml@monserveursmtp.com)',
 		'L_CONFIG_ADVANCED_SMTP_PASSWORD_HELP' => 'Parolă de utilizator pe gazda SMTP',
 		'L_CONFIG_ADVANCED_SMTP_PORT_HELP' => 'Numărul portului gazdă SMTP (implicit: 465)',
-		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'PluXml permite generarea de jetoane numai pentru serviciu <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Aveți nevoie de ajutor pentru a genera numele de utilizator și cheia secretă : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'PluXml permite generarea de jetoane numai pentru serviciu <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Aveți nevoie de ajutor pentru a genera numele de utilizator și cheia secretă : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Documentația PluXml</a>&nbsp;(fr).',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_EMAIL_HELP' => 'Adresa folosită pe serviciul OAUTH2 (exemplu : pluxml@gmail.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_CLIENTID_HELP' => 'ID client la serviciul OAUTH2 (exemplu : 664335625964-uha1vop20qPluXml81ubjkkgfabbbj6d.apps.googleusercontent.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY_HELP' => 'Cheia de client a serviciului OAUTH2 (exemplu : PrsvKp6aprKpoP8snnCoC8-x)',
