@@ -405,13 +405,13 @@ $LANG = array (
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY' => 'Секретный ключ клиента',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_TOKEN' => 'токен',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_GETTOKEN' => 'Создать токен',
-		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Нужна помощь : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_EMAIL_SENDING_TITLE_HELP' => 'Нужна помощь : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Документация PluXml</a>&nbsp;(fr).',
 		'L_CONFIG_ADVANCED_EMAIL_METHOD_HELP' => 'Для sendmail не требуется настройка.',
 		'L_CONFIG_ADVANCED_SMTP_SERVER_HELP' => 'Имя SMTP-сервера (пример : ssl0.ovh.net)',
 		'L_CONFIG_ADVANCED_SMTP_USERNAME_HELP' => 'Имя пользователя на узле SMTP (пример : pluxml@monserveursmtp.com)',
 		'L_CONFIG_ADVANCED_SMTP_PASSWORD_HELP' => 'Пароль пользователя на хосте SMTP',
 		'L_CONFIG_ADVANCED_SMTP_PORT_HELP' => 'Номер порта хоста SMTP (по умолчанию : 465)',
-		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'PluXml позволяет генерировать токены только для сервиса <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Нужна помощь в создании имени пользователя и секретного ключа : <a href="https://wiki.pluxml.org/personnaliser/personnalisation/#envoi-de-mails">PluXml documentation</a>&nbsp;(fr).',
+		'L_CONFIG_ADVANCED_SMTPOAUTH_TITLE_HELP' => 'PluXml позволяет генерировать токены только для сервиса <a href="https://cloud.google.com">GMAIL (Google)</a>.<br>Нужна помощь в создании имени пользователя и секретного ключа : <a href="https://wiki.pluxml.org/docs/customize/advancedconfig.html?highlight=smtp#envoi-d-e-mails">Документация PluXml</a>&nbsp;(fr).',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_EMAIL_HELP' => 'Адрес, используемый в сервисе OAUTH2 (пример: pluxml@gmail.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_CLIENTID_HELP' => 'Идентификатор клиента в сервисе OAUTH2 (пример: 664335625964-uha1vop20qPluXml81ubjkkgfabbbj6d.apps.googleusercontent.com)',
 		'L_CONFIG_ADVANCED_SMTPOAUTH_SECRETKEY_HELP' => 'Ключ клиента на сервисе OAUTH2 (пример: PrsvKp6aprKpoP8snnCoC8-x)',
