@@ -7,6 +7,7 @@ FIX Force some values of $plxMotor->aConf[] to be integer #552 (bazooka07)
 FIX Minor fix in PlxMotor function artInfoFromFilename #554 (gcyrillus, bazooka07)
 FIX Article thumbnail XSS vulnerability #556 (P3ter, Moritz Huppert)
 FIX Static pages PHP injection vulnerability #558 (P3ter, Moritz Huppert)
+FIX PluXml Documentation link for e-mail service configuration (P3ter)
 
 ## PLUXML 5.8.7 (2021/06/03) ##
 [+] Move plugins cached css files to data folder #526 (bazooka07)
